try cors policy

--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "@sec-block/secjs-util": "^1.1.22",
-    "@xkeshi/vue-qrcode": "xkeshi/vue-qrcode",
+    "@xkeshi/vue-qrcode": "github:xkeshi/vue-qrcode",
     "axios": "^0.18.0",
     "babel-plugin-component": "^1.1.1",
     "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.11",
-    "element-ui": "^2.5.4",
+    "element-ui": "^2.6.1",
     "fastclick": "^1.0.6",
     "jayson": "^2.1.2",
     "jayson-rpc-vue": "^1.1.2",
@@ -28,7 +28,7 @@
     "node-fetch": "^2.3.0",
     "normalize.css": "^8.0.1",
     "style-loader": "^0.23.1",
-    "vue": "^2.5.2",
+    "vue": "^2.6.8",
     "vue-i18n": "^8.8.2",
     "vue-router": "^3.0.1"
   },
@@ -74,7 +74,7 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.6.8",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
