--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "pc_wallet",
+  "name": "wallet-pc",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "侯召 <3100341979@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0  --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
@@ -17,6 +17,7 @@
     "@xkeshi/vue-qrcode": "github:xkeshi/vue-qrcode",
     "axios": "^0.18.0",
     "babel-plugin-component": "^1.1.1",
+    "babel-polyfill": "^6.26.0",
     "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.11",
     "element-ui": "^2.6.1",
@@ -25,7 +26,6 @@
     "jayson-rpc-vue": "^1.1.2",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.0",
-    "moment-timezone": "^0.5.25",
     "node-fetch": "^2.3.0",
     "normalize.css": "^8.0.1",
     "style-loader": "^0.23.1",
@@ -60,6 +60,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -75,7 +76,7 @@
     "vue-jest": "^1.0.2",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.6.8",
+    "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
