--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.28.11",
     "element-ui": "^2.6.1",
     "fastclick": "^1.0.6",
+    "file-saver": "^2.0.2",
     "is-hex-prefixed": "^1.0.0",
     "jayson": "^2.1.2",
     "jayson-rpc-vue": "^1.1.2",
