--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "style-loader": "^0.23.1",
     "vue": "^2.6.8",
     "vue-i18n": "^8.8.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
