--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.1",
     "babel-plugin-component": "^1.1.1",
     "babel-polyfill": "^6.26.0",
+    "clipboard": "^2.0.4",
     "crypto-js": "^3.1.9-1",
     "css-loader": "^0.28.11",
     "element-ui": "^2.11.1",
