--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@biut-block/biutjs-util": "^1.0.0",
+    "@biut-block/biutjs-util": "git+ssh://git@gitlab.com/MongoX-BIUT/biutjs-util.git#SenSmartContractTimeLock",
     "@xkeshi/vue-qrcode": "github:xkeshi/vue-qrcode",
     "axios": "^0.18.1",
     "babel-plugin-component": "^1.1.1",
@@ -27,13 +27,14 @@
     "is-hex-prefixed": "^1.0.0",
     "jayson": "^2.1.2",
     "jayson-rpc-vue": "^1.1.2",
-    "js-cookie": "^2.2.0",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.0",
     "node-fetch": "^2.3.0",
+    "ripemd160": "^2.0.2",
     "style-loader": "^0.23.1",
     "vue": "^2.6.8",
-    "vue-i18n": "^8.12.0",
-    "vue-router": "^3.0.7",
+    "vue-i18n": "^8.14.0",
+    "vue-router": "^3.1.2",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -62,19 +63,19 @@
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
-    "node-notifier": "^5.1.2",
+    "node-notifier": "^5.4.3",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^3.2.1",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.21",
+    "portfinder": "^1.0.23",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "sass": "^1.22.9",
-    "sass-loader": "^7.1.0",
+    "rimraf": "^2.7.1",
+    "sass": "^1.22.10",
+    "sass-loader": "^7.3.1",
     "selenium-server": "^3.0.1",
-    "semver": "^5.3.0",
+    "semver": "^5.7.1",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
