--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^8.5.0",
     "node-fetch": "^2.3.0",
     "ripemd160": "^2.0.2",
+    "string-random": "^0.1.3",
     "style-loader": "^0.23.1",
     "vue": "^2.6.8",
     "vue-i18n": "^8.14.0",
