--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "@biut-block/biutjs-util": "^1.0.0",
+    "@biut-block/biutjs-util": "^1.0.2",
     "@xkeshi/vue-qrcode": "github:xkeshi/vue-qrcode",
     "axios": "^0.18.1",
     "babel-plugin-component": "^1.1.1",
@@ -29,11 +29,12 @@
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.5.0",
     "node-fetch": "^2.3.0",
+    "ripemd160": "^2.0.2",
     "style-loader": "^0.23.1",
     "vue": "^2.6.8",
-    "vue-i18n": "^8.12.0",
+    "vue-i18n": "^8.15.0",
     "vue-router": "^3.0.7",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -62,15 +63,15 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.1",
     "ora": "^1.2.0",
-    "portfinder": "^1.0.21",
+    "portfinder": "^1.0.25",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
-    "sass": "^1.22.9",
+    "sass": "^1.23.3",
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
